Allow dropping files on the main window
We use a DragOverlay widget, taken from Fractal, to indicate that you
can drop a file on the application window.

--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -37,3 +37,8 @@ queuerow label.song-title {
   font-weight: 700;
   font-size: 100%;
 }
+
+dragoverlay:drop(active) {
+  background-color: alpha(@accent_bg_color, 0.5);
+  color: @accent_fg_color;
+}
