--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -9,7 +9,7 @@ button.large {
 
 .song-title {
   font-size: 300%;
-  font-weight: 300;
+  font-weight: 600;
 }
 
 .song-time {
@@ -44,9 +44,12 @@ dragoverlay:drop(active) {
 }
 
 window.main-window {
-  background-color: @background_color;
+  background: linear-gradient(127deg, alpha(@background_color_1, 0.65), @background_color_1 66%),
+              linear-gradient(217deg, alpha(@background_color_4, 0.65), @background_color_4 66%),
+              /* background_color_2 is used to determine foreground_color */
+              linear-gradient(336deg, alpha(@background_color_2, 0.65), @background_color_2 66%);
   color: @foreground_color;
-  transition-property: background-color, color;
+  transition-property: background, color;
   transition-duration: 250ms;
   transition-timing-function: ease;
 }
