ui: Add the "card" style to the queue
This gives us nice rounded corners.

--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -249,6 +249,9 @@
                                   <object class="GtkListView" id="queue_view">
                                     <property name="single-click-activate">true</property>
                                     <property name="hexpand">true</property>
+                                    <style>
+                                      <class name="card"/>
+                                    </style>
                                   </object>
                                 </property>
                               </object>
