style: Don't use blue focus rings for recolored window

--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -48,3 +48,8 @@ window.main-window {
   transition-duration: 250ms;
   transition-timing-function: ease;
 }
+
+.main-window button:focus,
+.main-window row:focus {
+  outline-color: alpha(currentColor, .25);
+}
