--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -8,15 +8,18 @@ button.large {
 }
 
 .song-title {
-  font-size: 300%;
-  font-weight: 600;
+  /* match title-1 */
+  font-size: 15pt;
+  font-weight: 800;
 }
 
 picture.album-art {
   min-width: 128px;
   min-height: 128px;
-  box-shadow: 0px 12px 16px -12px rgba(0,0,0,0.6);
+  box-shadow: 0px 1px 4px rgba(0,0,0,0.5),
+              0px 2px 8px rgba(0,0,0,0.3);
   border-radius: 6px;
+  margin: 6px;
 }
 
 queuerow {
