--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -39,13 +39,37 @@
                         <property name="hexpand">true</property>
                         <property name="spacing">24</property>
                         <child>
-                          <object class="GtkPicture" id="album_image">
-                            <property name="overflow">hidden</property>
-                            <property name="file">resource:///io/bassi/Amberol/icons/scalable/actions/music-note-single-symbolic.svg</property>
-                            <style>
-                              <class name="album-art"/>
-                              <class name="icon-dropshadow"/>
-                            </style>
+                          <object class="GtkStack" id="cover_stack">
+                            <property name="transition-type">crossfade</property>
+                            <child>
+                              <object class="GtkStackPage">
+                                <property name="name">no-image</property>
+                                <property name="child">
+                                  <object class="GtkPicture">
+                                    <property name="overflow">hidden</property>
+                                    <property name="file">resource:///io/bassi/Amberol/icons/scalable/actions/music-note-single-symbolic.svg</property>
+                                    <style>
+                                      <class name="album-art"/>
+                                      <class name="icon-dropshadow"/>
+                                    </style>
+                                  </object>
+                                </property>
+                              </object>
+                            </child>
+                            <child>
+                              <object class="GtkStackPage">
+                                <property name="name">cover-image</property>
+                                <property name="child">
+                                  <object class="GtkPicture" id="album_image">
+                                    <property name="overflow">hidden</property>
+                                    <style>
+                                      <class name="album-art"/>
+                                      <class name="icon-dropshadow"/>
+                                    </style>
+                                  </object>
+                                </property>
+                              </object>
+                            </child>
                           </object>
                         </child>
                         <child>
