style: Use a gradient for the cover background
In case the aspect ratio of the cover art is not 1, we use the color
palette of the cover as the background of the cover picture widget.

--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -49,7 +49,7 @@
                                     <property name="overflow">hidden</property>
                                     <property name="file">resource:///io/bassi/Amberol/icons/scalable/actions/music-note-single-symbolic.svg</property>
                                     <style>
-                                      <class name="cover"/>
+                                      <class name="no-cover"/>
                                       <class name="icon-dropshadow"/>
                                     </style>
                                   </object>
