--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -14,6 +14,16 @@ button.large {
 }
 
 picture.cover {
+  background: linear-gradient(to bottom, @background_color_1, @background_color_2);
+  min-width: 128px;
+  min-height: 128px;
+  box-shadow: 0px 1px 4px rgba(0,0,0,0.5),
+              0px 2px 8px rgba(0,0,0,0.3);
+  border-radius: 6px;
+  margin: 6px;
+}
+
+picture.no-cover {
   min-width: 128px;
   min-height: 128px;
   box-shadow: 0px 1px 4px rgba(0,0,0,0.5),
