Add a volume control widget
We bind the volume widget to the state's volume property, and every time
we modify the scale's position, we tell the player to update the volume
on the backend.

--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -201,6 +201,11 @@
                           </object>
                         </child>
                         <child>
+                          <object class="AmberolVolumeControl" id="volume_control">
+                            <property name="hexpand">true</property>
+                          </object>
+                        </child>
+                        <child>
                           <object class="GtkCenterBox" id="queue_controls_box">
                             <child type="start">
                               <object class="GtkBox">
