--- a/src/gtk/window.ui
+++ b/src/gtk/window.ui
@@ -3,6 +3,8 @@
   <requires lib="gtk" version="4.0"/>
   <template class="AmberolWindow" parent="AdwApplicationWindow">
     <property name="handle-menubar-accel">true</property>
+    <property name="default-width">400</property>
+    <property name="resizable">false</property>
     <property name="content">
       <object class="GtkWindowHandle">
         <child>
@@ -35,37 +37,42 @@
                     </style>
                     <child>
                       <object class="GtkBox">
-                        <property name="orientation">horizontal</property>
-                        <property name="hexpand">true</property>
-                        <property name="spacing">24</property>
+                        <property name="orientation">vertical</property>
+                        <property name="spacing">12</property>
                         <child>
-                          <object class="GtkStack" id="cover_stack">
-                            <property name="transition-type">crossfade</property>
+                          <object class="GtkBox">
+                            <property name="halign">center</property>
+                            <property name="valign">center</property>
                             <child>
-                              <object class="GtkStackPage">
-                                <property name="name">no-image</property>
-                                <property name="child">
-                                  <object class="GtkPicture">
-                                    <property name="overflow">hidden</property>
-                                    <property name="file">resource:///io/bassi/Amberol/icons/scalable/actions/music-note-single-symbolic.svg</property>
-                                    <style>
-                                      <class name="no-cover"/>
-                                      <class name="icon-dropshadow"/>
-                                    </style>
+                              <object class="GtkStack" id="cover_stack">
+                                <property name="transition-type">crossfade</property>
+                                <child>
+                                  <object class="GtkStackPage">
+                                    <property name="name">no-image</property>
+                                    <property name="child">
+                                      <object class="GtkPicture">
+                                        <property name="overflow">hidden</property>
+                                        <property name="file">resource:///io/bassi/Amberol/icons/scalable/actions/music-note-single-symbolic.svg</property>
+                                        <style>
+                                          <class name="no-cover"/>
+                                          <class name="icon-dropshadow"/>
+                                        </style>
+                                      </object>
+                                    </property>
                                   </object>
-                                </property>
-                              </object>
-                            </child>
-                            <child>
-                              <object class="GtkStackPage">
-                                <property name="name">cover-image</property>
-                                <property name="child">
-                                  <object class="AmberolCoverPicture" id="album_image">
-                                    <style>
-                                      <class name="icon-dropshadow"/>
-                                    </style>
+                                </child>
+                                <child>
+                                  <object class="GtkStackPage">
+                                    <property name="name">cover-image</property>
+                                    <property name="child">
+                                      <object class="AmberolCoverPicture" id="album_image">
+                                        <style>
+                                          <class name="icon-dropshadow"/>
+                                        </style>
+                                      </object>
+                                    </property>
                                   </object>
-                                </property>
+                                </child>
                               </object>
                             </child>
                           </object>
@@ -77,7 +84,7 @@
                             <property name="valign">center</property>
                             <child>
                               <object class="GtkLabel" id="song_title_label">
-                                <property name="xalign">0</property>
+                                <property name="xalign">0.5</property>
                                 <property name="ellipsize">end</property>
                                 <property name="width-chars">15</property>
                                 <style>
@@ -87,7 +94,7 @@
                             </child>
                             <child>
                               <object class="GtkLabel" id="song_artist_label">
-                                <property name="xalign">0</property>
+                                <property name="xalign">0.5</property>
                                 <property name="ellipsize">end</property>
                                 <property name="width-chars">20</property>
                                 <style>
@@ -97,7 +104,7 @@
                             </child>
                             <child>
                               <object class="GtkLabel" id="song_album_label">
-                                <property name="xalign">0</property>
+                                <property name="xalign">0.5</property>
                                 <property name="ellipsize">end</property>
                                 <property name="width-chars">20</property>
                                 <style>
@@ -107,7 +114,7 @@
                             </child>
                             <child>
                               <object class="GtkLabel" id="song_time_label">
-                                <property name="xalign">0</property>
+                                <property name="xalign">0.5</property>
                                 <style>
                                   <class name="numeric"/>
                                 </style>
@@ -296,7 +303,6 @@
                                 <property name="vscrollbar-policy">automatic</property>
                                 <property name="max-content-height">400</property>
                                 <property name="propagate-natural-height">true</property>
-                                <property name="hexpand">true</property>
                                 <property name="child">
                                   <object class="GtkListView" id="queue_view">
                                     <property name="single-click-activate">true</property>
